# typerex-attic

./: .gitignore  .travis-ci.sh  .travis-install.sh  .travis.yml  Makefile  README.md  build.ocp  ocp-autoconf.config  ocp-autoconf.files  opam  push-opam.sh
autoconf/: Makefile.config.in  Makefile.rules  config.ocpgen.in  configure  configure.ac
tools/: Makefile.shared
tools/ocp-check-crcs/: Changes.txt  Makefile  README.txt  build.ocp  crcChecks.ml  crcLoad.ml  crcMain.ml  crcMisc.ml  crcPrint.ml  crcTypes.ml  crcWarning.ml  manpage.ml  manpage2.ml  manpage2.mli  ocp-check-crcs.1
tools/ocp-check-globals/: Makefile  build.ocp  globalMain.ml
tools/ocp-check-headers/: Makefile  README.txt  build.ocp  checkHeaders.ml
tools/ocp-check-headers/typerex/: header-GPL.c  header-LGPL.c  header-LGPL.ml
tools/ocp-check-poly/: Makefile  README.md  build.ocp  polyMain.ml  test.ml
tools/ocp-check-poly/compat/: build.ocp  typedtreeIter.ml  typedtreeIter.mli
tools/ocp-imports/: Makefile  README.txt  build.ocp  importArch.ml  importArch.mli  importExtract.ml  importExtract.mli  importGraph.ml  importGraph.mli  main.ml  opam-sets.txt
tools/ocp-manager/: .gitignore  .pubconfig  Makefile  README.opam  Readme.md  VERSION  binaries.txt  build.ocp  managerBinaries.ml  managerBins.ml  managerCompile.ml  managerConfig.ml  managerInit.ml  managerInit.mli  managerMain.ml  managerMisc.ml  managerRestore.ml  managerSwitch.ml  managerTools.ml  managerWrapper.ml  managerWrapper.mli  manpage.ml  manpage.mli
tools/ocp-manager/doc/: Readme.md
tools/ocp-pack/: ChangeLog.txt  Makefile  build.ocp  packUnits.ml  version.ml
tools/opam-archive/: Makefile  build.ocp  main.ml  opamUrlParser.ml  opamUrlParser.mli
